--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@progress/kendo-angular-popup": "^3.0.0",
     "@progress/kendo-theme-default": "latest",
     "awesome-phonenumber": "^2.24.0",
+    "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
