--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "awesome-phonenumber": "^2.24.0",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
+    "ng-click-outside": "^6.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "^0.9.1"
